# gizual

./: .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .prettierignore  .prettierrc  .yarnrc.yml  CHANGELOG.md  Caddyfile.web  Cargo.toml  Dockerfile  Dockerfile.api  Dockerfile.landing-page  Dockerfile.web  NOTICE  README.md  package.json  shell.nix  turbo.json
.github/workflows/: api.yml  build-web.yml  build-webapp.yml  build.yml  cleanup-after-pr.yml  e2e-update.yml  landing-page.yml  lint.yml  web.yml
.yarn/patches/: react-zoom-pan-pinch-npm-3.4.2-c7c7ecce4a.patch
apps/api/: package.json  tsconfig.json  tsconfig.node.json
apps/benchmark-app/: .eslintrc.json  index.html  package.json  vite.config.ts
apps/gizual-api/: package.json  tsconfig.json  vite.config.ts
apps/gizual-app/: .eslintrc.cjs  index.html  package.json  svg.d.ts  tsconfig.json  turbowatch.ts  vite.config.ts
apps/landing-page/: .prettierrc  astro.config.mjs  base.css  package.json  tailwind.config.mjs  tsconfig.json
apps/wasi-playground-app/: .eslintrc.js  index.html  package.json  tsconfig.node.json  vite.config.ts
benchmarks/: basic-benchmark.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
docs/: dep-install-windows.md
e2e/: .gitignore  local-preview.ts  package.json  playwright.config.ts  tsconfig.json
e2e/src/: page-model.ts  remote-clone.e2e.ts  welcome.e2e.ts
tools/build-tools/: package.json
tools/eslint-config/: .eslintrc.js  index.js  package.json
tools/please/: .eslintrc.js  cli.js  package.json
tools/rust-wasi-tools/: binaryen.js  index.js  package.json
(+488 files in other folders)
