[workspace.package]
edition = "2021"

[workspace]
resolver = "2"
members = ["packages/explorer", "packages/explorer-web", "packages/explorer-node"]

[workspace.dependencies]
specta = { version = "=2.0.0-rc.6" }
structopt = "0.3"
serde_json = "1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_with = "3.0.0"
regex = "1.9.1"
git2 = { git = "https://github.com/gizual/git2-rs", default-features = false, branch = "wasm32-wasi-support", features = [
  "vendored-zlib"
] }
#git2 = { path = "../git2-rs" }
